--- a/08-multi-classification-problem.ipynb
+++ b/08-multi-classification-problem.ipynb
@@ -184,134 +184,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1,   100] loss: 2.295\n",
-      "[1,   200] loss: 2.264\n",
-      "[1,   300] loss: 2.114\n",
-      "[1,   400] loss: 1.538\n",
-      "[1,   500] loss: 0.890\n",
-      "[1,   600] loss: 0.620\n",
-      "[1,   700] loss: 0.480\n",
-      "[1,   800] loss: 0.442\n",
-      "[1,   900] loss: 0.412\n",
-      "[2,   100] loss: 0.359\n",
-      "[2,   200] loss: 0.340\n",
-      "[2,   300] loss: 0.308\n",
-      "[2,   400] loss: 0.297\n",
-      "[2,   500] loss: 0.261\n",
-      "[2,   600] loss: 0.264\n",
-      "[2,   700] loss: 0.240\n",
+      "[1,   100] loss: 2.293\n",
+      "[1,   200] loss: 2.245\n",
+      "[1,   300] loss: 2.053\n",
+      "[1,   400] loss: 1.368\n",
+      "[1,   500] loss: 0.748\n",
+      "[1,   600] loss: 0.550\n",
+      "[1,   700] loss: 0.502\n",
+      "[1,   800] loss: 0.425\n",
+      "[1,   900] loss: 0.407\n",
+      "[2,   100] loss: 0.343\n",
+      "[2,   200] loss: 0.329\n",
+      "[2,   300] loss: 0.299\n",
+      "[2,   400] loss: 0.285\n",
+      "[2,   500] loss: 0.280\n",
+      "[2,   600] loss: 0.269\n",
+      "[2,   700] loss: 0.231\n",
       "[2,   800] loss: 0.233\n",
-      "[2,   900] loss: 0.223\n",
-      "[3,   100] loss: 0.209\n",
+      "[2,   900] loss: 0.230\n",
+      "[3,   100] loss: 0.190\n",
       "[3,   200] loss: 0.189\n",
-      "[3,   300] loss: 0.184\n",
-      "[3,   400] loss: 0.173\n",
+      "[3,   300] loss: 0.188\n",
+      "[3,   400] loss: 0.177\n",
       "[3,   500] loss: 0.176\n",
-      "[3,   600] loss: 0.158\n",
-      "[3,   700] loss: 0.153\n",
-      "[3,   800] loss: 0.149\n",
-      "[3,   900] loss: 0.142\n",
-      "[4,   100] loss: 0.142\n",
-      "[4,   200] loss: 0.129\n",
-      "[4,   300] loss: 0.126\n",
-      "[4,   400] loss: 0.130\n",
-      "[4,   500] loss: 0.135\n",
-      "[4,   600] loss: 0.121\n",
-      "[4,   700] loss: 0.109\n",
-      "[4,   800] loss: 0.101\n",
-      "[4,   900] loss: 0.109\n",
-      "[5,   100] loss: 0.095\n",
-      "[5,   200] loss: 0.098\n",
-      "[5,   300] loss: 0.092\n",
-      "[5,   400] loss: 0.097\n",
-      "[5,   500] loss: 0.108\n",
-      "[5,   600] loss: 0.086\n",
-      "[5,   700] loss: 0.099\n",
-      "[5,   800] loss: 0.092\n",
-      "[5,   900] loss: 0.088\n",
-      "[6,   100] loss: 0.072\n",
-      "[6,   200] loss: 0.070\n",
-      "[6,   300] loss: 0.082\n",
-      "[6,   400] loss: 0.078\n",
-      "[6,   500] loss: 0.077\n",
-      "[6,   600] loss: 0.084\n",
-      "[6,   700] loss: 0.074\n",
-      "[6,   800] loss: 0.073\n",
-      "[6,   900] loss: 0.061\n",
-      "[7,   100] loss: 0.056\n",
-      "[7,   200] loss: 0.064\n",
-      "[7,   300] loss: 0.059\n",
-      "[7,   400] loss: 0.058\n",
-      "[7,   500] loss: 0.058\n",
-      "[7,   600] loss: 0.063\n",
-      "[7,   700] loss: 0.059\n",
-      "[7,   800] loss: 0.058\n",
-      "[7,   900] loss: 0.067\n",
-      "[8,   100] loss: 0.043\n",
-      "[8,   200] loss: 0.049\n",
-      "[8,   300] loss: 0.048\n",
-      "[8,   400] loss: 0.054\n",
-      "[8,   500] loss: 0.055\n",
-      "[8,   600] loss: 0.055\n",
-      "[8,   700] loss: 0.049\n",
-      "[8,   800] loss: 0.049\n",
-      "[8,   900] loss: 0.045\n",
-      "[9,   100] loss: 0.039\n",
-      "[9,   200] loss: 0.036\n",
-      "[9,   300] loss: 0.038\n",
-      "[9,   400] loss: 0.042\n",
-      "[9,   500] loss: 0.045\n",
-      "[9,   600] loss: 0.042\n",
-      "[9,   700] loss: 0.041\n",
-      "[9,   800] loss: 0.044\n",
-      "[9,   900] loss: 0.037\n",
-      "[10,   100] loss: 0.026\n",
-      "[10,   200] loss: 0.032\n",
-      "[10,   300] loss: 0.033\n",
-      "[10,   400] loss: 0.033\n",
-      "[10,   500] loss: 0.032\n",
-      "[10,   600] loss: 0.028\n",
-      "[10,   700] loss: 0.037\n",
-      "[10,   800] loss: 0.033\n",
-      "[10,   900] loss: 0.042\n",
-      "Accuracy on test set:  97.5900%\n",
-      "[11,   100] loss: 0.022\n",
-      "[11,   200] loss: 0.030\n",
-      "[11,   300] loss: 0.028\n",
-      "[11,   400] loss: 0.027\n",
-      "[11,   500] loss: 0.023\n",
-      "[11,   600] loss: 0.029\n",
-      "[11,   700] loss: 0.032\n",
-      "[11,   800] loss: 0.029\n",
-      "[11,   900] loss: 0.022\n",
-      "[12,   100] loss: 0.022\n",
-      "[12,   200] loss: 0.021\n",
-      "[12,   300] loss: 0.017\n",
-      "[12,   400] loss: 0.017\n",
-      "[12,   500] loss: 0.024\n",
-      "[12,   600] loss: 0.017\n",
-      "[12,   700] loss: 0.028\n",
-      "[12,   800] loss: 0.022\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 29\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m100\u001b[39m):\n\u001b[1;32m---> 29\u001b[0m         \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepoch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     30\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m epoch \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m10\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m9\u001b[39m:\n\u001b[0;32m     31\u001b[0m             test()\n",
-      "Cell \u001b[1;32mIn[7], line 3\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(epoch)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtrain\u001b[39m(epoch: \u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m      2\u001b[0m     running_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m batch_idx, (inputs, target) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(train_loader):\n\u001b[0;32m      4\u001b[0m         optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m      6\u001b[0m         outputs \u001b[38;5;241m=\u001b[39m model(inputs)\n",
-      "File \u001b[1;32mc:\\Users\\jerry\\miniconda3\\envs\\vpteam\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:631\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    628\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sampler_iter \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    629\u001b[0m     \u001b[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[0;32m    630\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reset()  \u001b[38;5;66;03m# type: ignore[call-arg]\u001b[39;00m\n\u001b[1;32m--> 631\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_next_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    632\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m    633\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[0;32m    634\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[0;32m    635\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called:\n",
-      "File \u001b[1;32mc:\\Users\\jerry\\miniconda3\\envs\\vpteam\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:675\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    673\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_next_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    674\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_index()  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m--> 675\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dataset_fetcher\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfetch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m    676\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory:\n\u001b[0;32m    677\u001b[0m         data \u001b[38;5;241m=\u001b[39m _utils\u001b[38;5;241m.\u001b[39mpin_memory\u001b[38;5;241m.\u001b[39mpin_memory(data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory_device)\n",
-      "File \u001b[1;32mc:\\Users\\jerry\\miniconda3\\envs\\vpteam\\lib\\site-packages\\torch\\utils\\data\\_utils\\fetch.py:51\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[1;34m(self, possibly_batched_index)\u001b[0m\n\u001b[0;32m     49\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[0;32m     50\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 51\u001b[0m         data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[idx] \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m possibly_batched_index]\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     53\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
-      "File \u001b[1;32mc:\\Users\\jerry\\miniconda3\\envs\\vpteam\\lib\\site-packages\\torch\\utils\\data\\_utils\\fetch.py:51\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     49\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[0;32m     50\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 51\u001b[0m         data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m possibly_batched_index]\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     53\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
-      "File \u001b[1;32mc:\\Users\\jerry\\miniconda3\\envs\\vpteam\\lib\\site-packages\\torchvision\\datasets\\mnist.py:145\u001b[0m, in \u001b[0;36mMNIST.__getitem__\u001b[1;34m(self, index)\u001b[0m\n\u001b[0;32m    142\u001b[0m img \u001b[38;5;241m=\u001b[39m Image\u001b[38;5;241m.\u001b[39mfromarray(img\u001b[38;5;241m.\u001b[39mnumpy(), mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mL\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    144\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransform \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 145\u001b[0m     img \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    147\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_transform \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    148\u001b[0m     target \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_transform(target)\n",
-      "File \u001b[1;32mc:\\Users\\jerry\\miniconda3\\envs\\vpteam\\lib\\site-packages\\torchvision\\transforms\\transforms.py:95\u001b[0m, in \u001b[0;36mCompose.__call__\u001b[1;34m(self, img)\u001b[0m\n\u001b[0;32m     93\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, img):\n\u001b[0;32m     94\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransforms:\n\u001b[1;32m---> 95\u001b[0m         img \u001b[38;5;241m=\u001b[39m \u001b[43mt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     96\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m img\n",
-      "File \u001b[1;32mc:\\Users\\jerry\\miniconda3\\envs\\vpteam\\lib\\site-packages\\torchvision\\transforms\\transforms.py:137\u001b[0m, in \u001b[0;36mToTensor.__call__\u001b[1;34m(self, pic)\u001b[0m\n\u001b[0;32m    129\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, pic):\n\u001b[0;32m    130\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    131\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m    132\u001b[0m \u001b[38;5;124;03m        pic (PIL Image or numpy.ndarray): Image to be converted to tensor.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    135\u001b[0m \u001b[38;5;124;03m        Tensor: Converted image.\u001b[39;00m\n\u001b[0;32m    136\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 137\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_tensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpic\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\jerry\\miniconda3\\envs\\vpteam\\lib\\site-packages\\torchvision\\transforms\\functional.py:173\u001b[0m, in \u001b[0;36mto_tensor\u001b[1;34m(pic)\u001b[0m\n\u001b[0;32m    171\u001b[0m img \u001b[38;5;241m=\u001b[39m img\u001b[38;5;241m.\u001b[39mview(pic\u001b[38;5;241m.\u001b[39msize[\u001b[38;5;241m1\u001b[39m], pic\u001b[38;5;241m.\u001b[39msize[\u001b[38;5;241m0\u001b[39m], F_pil\u001b[38;5;241m.\u001b[39mget_image_num_channels(pic))\n\u001b[0;32m    172\u001b[0m \u001b[38;5;66;03m# put it from HWC to CHW format\u001b[39;00m\n\u001b[1;32m--> 173\u001b[0m img \u001b[38;5;241m=\u001b[39m \u001b[43mimg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpermute\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mcontiguous()\n\u001b[0;32m    174\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(img, torch\u001b[38;5;241m.\u001b[39mByteTensor):\n\u001b[0;32m    175\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m img\u001b[38;5;241m.\u001b[39mto(dtype\u001b[38;5;241m=\u001b[39mdefault_float_dtype)\u001b[38;5;241m.\u001b[39mdiv(\u001b[38;5;241m255\u001b[39m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "[3,   600] loss: 0.169\n",
+      "[3,   700] loss: 0.160\n",
+      "[3,   800] loss: 0.156\n",
+      "[3,   900] loss: 0.158\n",
+      "[4,   100] loss: 0.139\n",
+      "[4,   200] loss: 0.140\n",
+      "[4,   300] loss: 0.127\n",
+      "[4,   400] loss: 0.129\n",
+      "[4,   500] loss: 0.128\n",
+      "[4,   600] loss: 0.128\n",
+      "[4,   700] loss: 0.122\n",
+      "[4,   800] loss: 0.110\n",
+      "[4,   900] loss: 0.124\n",
+      "[5,   100] loss: 0.107\n",
+      "[5,   200] loss: 0.110\n",
+      "[5,   300] loss: 0.094\n",
+      "[5,   400] loss: 0.093\n",
+      "[5,   500] loss: 0.104\n",
+      "[5,   600] loss: 0.098\n",
+      "[5,   700] loss: 0.107\n",
+      "[5,   800] loss: 0.093\n",
+      "[5,   900] loss: 0.082\n",
+      "[6,   100] loss: 0.081\n",
+      "[6,   200] loss: 0.083\n",
+      "[6,   300] loss: 0.073\n",
+      "[6,   400] loss: 0.086\n",
+      "[6,   500] loss: 0.074\n",
+      "[6,   600] loss: 0.082\n",
+      "[6,   700] loss: 0.075\n",
+      "[6,   800] loss: 0.075\n",
+      "[6,   900] loss: 0.081\n",
+      "[7,   100] loss: 0.063\n",
+      "[7,   200] loss: 0.063\n",
+      "[7,   300] loss: 0.065\n",
+      "[7,   400] loss: 0.055\n",
+      "[7,   500] loss: 0.067\n",
+      "[7,   600] loss: 0.067\n",
+      "[7,   700] loss: 0.060\n",
+      "[7,   800] loss: 0.066\n",
+      "[7,   900] loss: 0.062\n",
+      "[8,   100] loss: 0.056\n",
+      "[8,   200] loss: 0.046\n",
+      "[8,   300] loss: 0.054\n",
+      "[8,   400] loss: 0.052\n",
+      "[8,   500] loss: 0.047\n",
+      "[8,   600] loss: 0.054\n",
+      "[8,   700] loss: 0.057\n",
+      "[8,   800] loss: 0.046\n",
+      "[8,   900] loss: 0.053\n",
+      "[9,   100] loss: 0.042\n",
+      "[9,   200] loss: 0.043\n",
+      "[9,   300] loss: 0.032\n",
+      "[9,   400] loss: 0.041\n",
+      "[9,   500] loss: 0.048\n",
+      "[9,   600] loss: 0.037\n",
+      "[9,   700] loss: 0.040\n",
+      "[9,   800] loss: 0.043\n",
+      "[9,   900] loss: 0.042\n",
+      "[10,   100] loss: 0.027\n",
+      "[10,   200] loss: 0.031\n",
+      "[10,   300] loss: 0.030\n",
+      "[10,   400] loss: 0.035\n",
+      "[10,   500] loss: 0.030\n",
+      "[10,   600] loss: 0.040\n",
+      "[10,   700] loss: 0.033\n",
+      "[10,   800] loss: 0.036\n",
+      "[10,   900] loss: 0.037\n",
+      "Accuracy on test set:  97.6100%\n"
      ]
     }
    ],
